--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,12 @@ services:
       - laravel
 
   php:
-    image: php:8.4.0alpha4-fpm-alpine
+    build:
+      context: .
+      dockerfile: php.dockerfile
     container_name: php
+    volumes:
+      - ./src:/var/www/html
     networks:
       - laravel
 
