--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,12 @@ services:
   mysql:
     image: mysql:latest
     container_name: mysql
+    ports:
+      - 3307:3306
+    volumes:
+      - ./mysql:/var/lib/mysql
     environment:
-      - MYSQL_DATABASE=laravel
+      - MYSQL_DATABASE=laraveldb
       - MYSQL_USER=laravel
       - MYSQL_PASSWORD=password
       - MYSQL_ROOT_PASSWORD=password
