--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       context: .
       dockerfile: nginx.dockerfile
     container_name: nginx
+    depends_on:
+      - php
+      - mysql
     ports:
       - 80:80
       - 443:443
@@ -40,5 +43,14 @@ services:
       - MYSQL_USER=laravel
       - MYSQL_PASSWORD=password
       - MYSQL_ROOT_PASSWORD=password
+    networks:
+      - laravel
+
+  composer:
+    image: composer:latest
+    container_name: composer
+    volumes:
+      - ./src:/var/www/html
+    working_dir: /var/www/html
     networks:
       - laravel
