--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,3 +76,15 @@ services:
     entrypoint: ["npm"]
     networks:
       - laravel
+
+  phpunit:
+    build:
+      context: .
+      dockerfile: php.dockerfile
+    container_name: phpunit
+    networks:
+      - laravel
+    volumes:
+      - ./src:/var/www/html
+    working_dir: /var/www/html
+    entrypoint: ["/var/www/html/vendor/bin/phpunit"]
